Use alpine:3.12 because the webdav needs apr-util-dbm_db.

--- a/docker-webdav/conf/conf-available/dav.conf
+++ b/docker-webdav/conf/conf-available/dav.conf
@@ -1,16 +1,18 @@
+<IfModule mod_dav_fs.c>
 DavLockDB "/var/lib/dav/DavLock"
 Alias / "/var/lib/dav/data/"
 <Directory "/var/lib/dav/data/">
   Dav On
   Options Indexes FollowSymLinks
-
+</Directory>
+<Location />
   AuthType Basic
   AuthName "WebDAV"
   AuthUserFile "/user.passwd"
   <RequireAny>
     Require valid-user
   </RequireAny>
-</Directory>
+</Location>
 
 # These disable redirects on non-GET requests for directories that
 # don't include the trailing slash (for misbehaving clients).
@@ -23,3 +25,4 @@ BrowserMatch "^XML Spy" redirect-carefully
 BrowserMatch "^Dreamweaver-WebDAV-SCM1" redirect-carefully
 BrowserMatch " Konqueror/4" redirect-carefully
 BrowserMatch "^gvfs" redirect-carefully
+</IfModule>
