--- a/docker-webdav/Dockerfile
+++ b/docker-webdav/Dockerfile
@@ -157,6 +157,8 @@ RUN set -eux; \
 		E3480043595621FE56105F112AB12A7ADC55C003 \
 # Joe Orton (Release Signing Key) <jorton@apache.org>
 		93525CFCF6FDFFB3FD9700DD5A4B10AE43B56A27 \
+# Christophe JAILLET <christophe.jaillet@wanadoo.fr>
+        C55AB7B9139EB2263CD1AABC19B033D1760C227B \
 	; do \
 		gpg --batch --keyserver keyserver.ubuntu.com --recv-keys "$key"; \
 	done; \
